--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.3",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.14.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
